Add Kerberos authentication profile